test/org/midica/testfiles/failing/define-twice.midica
INCLUDE inc/instruments.midica

DEFINE CHORD a
DEFINE CHORD b

